added some messages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ author: W3layouts
 author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
--->
+hello -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +20,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         }, false);
 
         function hideURLbar() {
+			
             window.scrollTo(0, 1);
         }
     </script>
